--- a/scss/base/_modules.scss
+++ b/scss/base/_modules.scss
@@ -4,14 +4,10 @@
 }
 $max-width: 1280px;
 
-header{
-	@include outer-container;
-}
-
 section{
 	@include outer-container;
-}
 
-footer{
-	@include outer-container;
+	article{
+		@include outer-container(750px);
+	}
 }
